logs/dag_id=Postgres_dag/run_id=manual__2024-07-15T161222.870144+0000/task_id=insert_into_table/attempt=2.log
[2024-07-15T16:14:26.865+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-15T16:14:26.905+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:12:22.870144+00:00 [queued]>
[2024-07-15T16:14:26.914+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:12:22.870144+00:00 [queued]>
[2024-07-15T16:14:26.915+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 6
[2024-07-15T16:14:26.962+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2024-07-15 16:12:22.870144+00:00
[2024-07-15T16:14:26.972+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Postgres_dag', 'insert_into_table', 'manual__2024-07-15T16:12:22.870144+00:00', '--job-id', '31', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres.py', '--cfg-path', '/tmp/tmpkfez1vr4']
[2024-07-15T16:14:26.976+0000] {standard_task_runner.py:91} INFO - Job 31: Subtask insert_into_table
[2024-07-15T16:14:26.978+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=1210) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-15T16:14:26.979+0000] {standard_task_runner.py:63} INFO - Started process 1211 to run task
[2024-07-15T16:14:27.056+0000] {task_command.py:426} INFO - Running <TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:12:22.870144+00:00 [running]> on host 32f997017b5a
[2024-07-15T16:14:27.245+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Rayzo' AIRFLOW_CTX_DAG_ID='Postgres_dag' AIRFLOW_CTX_TASK_ID='insert_into_table' AIRFLOW_CTX_EXECUTION_DATE='2024-07-15T16:12:22.870144+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-15T16:12:22.870144+00:00'
[2024-07-15T16:14:27.246+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-15T16:14:27.279+0000] {sql.py:276} INFO - Executing:  
        insert into table drag_runs(dt,dag_id) values('2024-07-15', 'Postgres_dag')
        
[2024-07-15T16:14:27.315+0000] {base.py:84} INFO - Using connection ID 'Postgres_con' for task execution.
[2024-07-15T16:14:27.348+0000] {base.py:84} INFO - Using connection ID 'Postgres_con' for task execution.
[2024-07-15T16:14:27.368+0000] {sql.py:487} INFO - Running statement:  
        insert into table drag_runs(dt,dag_id) values('2024-07-15', 'Postgres_dag')
        , parameters: None
[2024-07-15T16:14:27.376+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-15T16:14:27.377+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "table"
LINE 2:         insert into table drag_runs(dt,dag_id) values('2024-...
                            ^

[2024-07-15T16:14:27.394+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Postgres_dag, task_id=insert_into_table, run_id=manual__2024-07-15T16:12:22.870144+00:00, execution_date=20240715T161222, start_date=20240715T161426, end_date=20240715T161427
[2024-07-15T16:14:27.441+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 31 for task insert_into_table (syntax error at or near "table"
LINE 2:         insert into table drag_runs(dt,dag_id) values('2024-...
                            ^
; 1211)
[2024-07-15T16:14:27.477+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-15T16:14:27.509+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-15T16:14:27.543+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
